Corrections orthographiques diverse.

--- a/P1-LesBasesImperatives/CH1-AvantDeCommencer/Chapter.tex
+++ b/P1-LesBasesImperatives/CH1-AvantDeCommencer/Chapter.tex
@@ -56,7 +56,7 @@ Vous pouvez les laisser de côté lors d'une première lecture.
 Qu'est-ce qu'un ordinateur ?
 Avant tout une machine qui manipule des données
 (par exemple la photo de votre chat, chien, petit-neveu,
-le site Web que vous consultez, ou le résultat d'une expérience du LHC),
+le site Web que vous consultez, ou le résultat d'une expérience du LHC\footnote{Large Hadron Collider}),
 et cela selon un programme qui peut être changé,
 c'est-à-dire que le \emph{programme est lui même une sorte de donnée}.
 
@@ -64,7 +64,7 @@ Ainsi, les organes les plus importants d'un ordinateur sont
 sa mémoire, qui contient les données, et le processeur,
 qui exécute le programme, lui aussi stocké en mémoire, puisque c'est une donnée.
 
-Ensuite, un ordinateur possède aussi des entrées et des sorties (E/S, ou \emph{I/O} en anglais),
+Ensuite, un ordinateur possède aussi des entrées et des sorties (E/S\footnote{Entrée/Sortie}, ou \emph{I/O\footnote{In/Out} en anglais),
 qui lui permettent de communiquer avec le reste du monde
 (la carte graphique qui affiche ce texte à l'écran,
 la carte réseau qui permet de charger des pages Web,
@@ -75,7 +75,7 @@ Une mémoire qui ne s'efface pas si on coupe le courant,
 mais qui a généralement l'inconvénient d'être lente :
 c'est par exemple le disque dur ou l'antique disquette.
 Et pour pallier à cet inconvénient, une mémoire rapide,
-de moindre capacité et non persistante : la mémoire vive ou RAM.
+de moindre capacité et non persistante : la mémoire vive ou RAM\footnote{Random Access Memory (que l'on traduit en français par mémoire à accès direct, ou plus communément mémoire vive)}.
 Il y a aussi des mémoires dans lesquelles on ne peut que lire, qui
 contiennent parfois les instructions nécessaire au démarrage de l'ordinateur.
 \subsection{Qu'est-ce qu'un programme ?}
@@ -161,11 +161,11 @@ Le but était de créer un langage puissant, rapide, et sécurisé, mais avec un
 aussi agréable à utiliser qu’un langage de script,
 et beaucoup plus accessible aux débutants que l'Objective-C.
 
-Swift à ensuite été mis à jour en 1.1 puis 1.2 pendant l'année 2014 -- 2015.
+Swift a ensuite été mis à jour en 1.1 puis 1.2 pendant l'année 2014-2015.
 
-Enfin en Juin 2015, la version 2 de Swift a été dévoilée pendant la WWDC.
+Enfin, en juin 2015, la version 2 de Swift a été dévoilée pendant la WWDC\footnote{Worldwide Developers Conference, une conférence tenue par Apple chaque année et destinée à présenter aux développeurs les nouveautés logicielles pour Mac et iOS.}.
 
-Il a enfin été annoncé que swift et sa librairie standard seront rendu opensource avant la fin 2015. Apple fournira même un port GNU/Linux.
+Il a enfin été annoncé que Swift et sa librairie standard seront rendus \emph{open source} avant la fin 2015. Apple fournira même un port GNU/Linux.
 \section{Les outils du programmeur}
 Si vous avez bien lu la partie précédente, vous devriez déjà en avoir identifié un.
 
