--- a/P1-LesBasesImperatives/CH2-DecouvronsXCode/Chapter.tex
+++ b/P1-LesBasesImperatives/CH2-DecouvronsXCode/Chapter.tex
@@ -2,33 +2,33 @@
 Dans cette partie, nous allons installer et découvrir l'EDI\footnote{\emph{EDI} : Environnement de Développement Intégré} d’Apple,
 puis découvrir notre première ligne de code.
 \section{Installation de Xcode}
-À l'heure ou j'écris ces lignes, Xcode 7 n'est pas encore en version finale disponible sur le Mac App Store.
+À l'heure où j'écris ces lignes, Xcode 7 n'est pas encore en version finale disponible sur le Mac App Store.
 
-Je vous conseille tout de même d'installer le version 6 depuis le Mac App Store. (Si il s'avère que la version que vous obtenez est déjà 7, c'est que je oublié de mettre à jour ces instructions)
+Je vous conseille tout de même d'installer la version 6 depuis le Mac App Store. S'il s'avère que la version que vous obtenez est déjà la 7, c'est que j'ai oublié de mettre à jour ces instructions.
 
 Je vous expliquerai ensuite comment obtenir la bêta de Xcode 7.
 
-\subsection{Installation dernière version finale depuis le Mac App Store}
-L'installation de Xcode depuis le MAS\footnote{Mac App Store} est plutôt facile et est gratuite (enfin moyennant votre abonnement internet).
+\subsection{Installation de la dernière version finale depuis le Mac App Store}
+L'installation de Xcode depuis le MAS\footnote{Mac App Store} est plutôt facile et est gratuite (enfin moyennant votre abonnement Internet).
 
-Il vous suffit de taper Xcode dans le champ de recherche pour voir apparaitre l'application comme premier résultat (marquée \emph{les indispensables} et \emph{Développeurs}).
+Il vous suffit de taper Xcode dans le champ de recherche pour voir apparaître l'application comme premier résultat (marquée \emph{les indispensables} et \emph{Développeurs}).
 
-Une fois les quelques gigaoctets de l'application téléchargés
+Une fois le téléchargement de quelques Go\footnote{Giga octets, environ 1 miiliards d'octets} terminé
 (grosse pause café),
-vous verrez l'application apparaître dans votre dossier application.
+vous verrez apparaître Xcode dans votre dossier \og Applications \fg{}.
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.25]{\TSwiftRoot/P1-LesBasesImperatives/CH2-DecouvronsXcode/img/Launchpad}
 \caption{L'icône de Xcode dans la pile \og Applications \fg{}}
 \end{figure}
 
-\subsection{Installation de la beta}
+\subsection{Installation de la bêta}
 Un lien vers la bêta de Xcode 7 est fourni sur \TSwiftUrl{https://developer.apple.com/swift/resources/}{ce site}{Swift Blog --- Ressources}, qui correspond au blog d'Apple concernant Swift.
 
-A priori Apple devrait vous demander de vous identifier avec une Apple ID de développeur. Si vous ne vous êtes jamais enregistré, sachez que l'enregistrement est gratuit.
+A priori, Apple devrait vous demander de vous identifier avec une Apple ID de développeur. Si vous ne vous êtes jamais enregistré, sachez que l'enregistrement est gratuit.
 
 \paragraph{Attention}
-Il existe un programme payant, qui donne accès à beaucoup plus de choses (Forum, possibilité de rapporter des bugs, certificats pour signer le code, distribution App Store), mais nous n'en avons pas besoin ici.
+Il existe un programme payant, qui donne accès à beaucoup plus de choses (forum, possibilité de rapporter des bugs, certificats pour signer le code, distribution App Store), mais nous n'en avons pas besoin ici.
 
 
 \section{Premier contact avec Swift : un playground}
