--- a/Preface.tex
+++ b/Preface.tex
@@ -14,6 +14,6 @@ Le PDF du cours est aussi disponible de façon provisoire \TSwiftUrl{https://one
 En étudiant ce cours
 (désolé de vous dire que c'est un peu de bouleau et pas de la salade)
 vous acquerrez de véritables méthodes et compétences en programmation,
-par le biais de nombreux exercices parsemé à travers ces pages.
+par le biais de nombreux exercices parsemés à travers ces pages.
 
 Cher lecteur si tu es d'accord avec ce projet, accroches-toi et attention pour le décollage.
