--- a/TutorielSwift.tex
+++ b/TutorielSwift.tex
@@ -18,7 +18,7 @@ A copy of the license is included in the appendix entitled ``GNU
 Free Documentation License''.
 \end{otherlanguage}
 
-Il vous est donnée la permission de reproduire redistribuer et/ou modifier ce document selon les termes de la GNU Free Documentation Licence, Version 1.3 ou ultérieur, publiée par la Free Software Foundation; avec aucune section invariante, aucun texte de couverture et aucun texte de quatrième de couverture.
+Il vous est donnée la permission de reproduire redistribuer et/ou modifier ce document selon les termes de la GNU Free Documentation Licence, Version 1.3 ou ultérieure, publiée par la Free Software Foundation; avec aucune section invariante, aucun texte de couverture et aucun texte de quatrième de couverture.
 Un copie de cette licence est incluse dans l'appendice intitulé <<GNU Free Documentation License>>.
 
 \input{Preface}
