Hotfoot about multi line comments merge.

--- a/P1-LesBasesImperatives/CH2-DecouvronsXCode/Chapter.tex
+++ b/P1-LesBasesImperatives/CH2-DecouvronsXCode/Chapter.tex
@@ -138,7 +138,7 @@ Comme un court exemple vaut mieux qu’un long discours,
 je vous laisse consulter le code suivant.
 
 \paragraph{Attention :} À ceux qui connaissent les commentaires du C,
-en Swift, les commentaires s'imbriquent les un dans les autres.
+en Swift, les commentaires multi-lignes s'imbriquent les un dans les autres.
 
 \begin{listing}[H]
 \caption{Que de commentaires !}
@@ -154,9 +154,7 @@ Il peut s'étendre sur plusieurs lignes,
 il est délimité par un symbole de début, un slash (/) suivi d'une étoile *,
 et un délimiteur de fin, le même, mais à l'envers.
 En swift les commentaires s'imbriquent les un dans les autres.
-// Je suis un commentaire imbriqué sur une ligne*/
-Le symbole de fin est ignoré puisqu'il est dans un commentaire mono-ligne.
-/*Je suis aussi imbriqué*/
+/*Je suis un commentaire imbriqué*/
 print("Hello, playground")
 Mais rien ne se passe ! On est dans un commentaire.
 Fin du commentaire sur plusieurs lignes:*/
