Updates to latest version on ZdS.

--- a/P1-LesBasesImperatives/CH2-DecouvronsXCode/Chapter.tex
+++ b/P1-LesBasesImperatives/CH2-DecouvronsXCode/Chapter.tex
@@ -36,7 +36,7 @@ Ouvrez Xcode.
 Vous devez voir apparaitre cette fenêtre, à la colonne de droite près.
 \begin{figure}[H]
 \centering
-\includegraphics[scale=0.5]{\TSwiftRoot/P1-LesBasesImperatives/CH2-DecouvronsXcode/img/XcodeWindow}
+\includegraphics[width=\textwidth,keepaspectratio]{\TSwiftRoot/P1-LesBasesImperatives/CH2-DecouvronsXcode/img/XcodeWindow}
 \caption{Fenêtre d'accueil de Xcode}
 \end{figure}
 
@@ -45,10 +45,14 @@ pour créer un nouveau \og playground \fg{}.
 Choisissez comme plate-forme OS X, et donnez lui un nom sensé.
 Une fois le projet enregistré, vous voyez apparaître une fenêtre en deux parties.
 
-À gauche, un éditeur de texte qui contient du code Swift,
-à droite, une colonne dans laquelle sont affichés
-les résultats de chaque instructions.
-Cette dernière est ce qui fait la puissance d'un \og playground \fg{} !
+À gauche, un éditeur de texte qui contient du code Swift, à droite, une colonne dans laquelle sont affichés les résultats de chaque instruction. Cette dernière est ce qui fait la puissance d’un \emph{playground} !
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=\textwidth,keepaspectratio]{\TSwiftRoot/P1-LesBasesImperatives/CH2-DecouvronsXcode/img/Playground}
+\caption{La fenêtre qui doit s’afficher lorsque vous lancez un nouveau \emph{playground}}
+\end{figure}
+
 
 En Swift une instruction se termine par un retour à la ligne, ou un point virgule
 (si on tient absolument à mettre plusieurs instructions sur une ligne).
