--- a/P1-LesBasesImperatives/CH3-LesVariables/Chapter.tex
+++ b/P1-LesBasesImperatives/CH3-LesVariables/Chapter.tex
@@ -147,7 +147,7 @@ comme étant la même chose qu'un type déjà existant.
 (Les noms de types suivent les même règles que les noms de variable).
 Exemple :
 \mintinline{swift}{typealias Age = UInt8}
-Par convention les noms de type sont en CamelCase,
+Par convention les noms de type sont en \emph{CamelCase},
 c'est à dire fait de mots dont la première lettre est en majuscule
 collés les uns aux autres sans espaces.
 \emph{Toute variable possède un type.}
