--- a/Preface.tex
+++ b/Preface.tex
@@ -1,10 +1,20 @@
 \chapter*{Préface}
 \phantomsection
 \addcontentsline{toc}{chapter}{Préface}
-Vous avez un Mac, vous avez toujours rêver d'écrire des applications, ou d'apprendre à programmer ?
+Vous avez un Mac, vous avez toujours rêvé d'écrire des applications, ou d'apprendre à programmer ?
 Ce tutoriel est pour vous.
 Vous y apprendrez à programmer à partir de  Zér0\footnote{Dédicace à feu le site du Zér0} 
 en utilisant le nouveau langage d'Apple, Swift, dans sa deuxième version, puis à écrire vos premières applications graphiques.
+
+Pour suivre ce cours, il vous faut simplement ce qui suit.
+\begin{itemize}
+\item Posséder un Mac sous OS X 10.10 Yosemite ou plus récent,
+\item Être persévérant, rigoureux et logique.
+\item Ne pas faire une allergie à la langue de Shakespeare, ni à un peu de mathématiques (niveau collège).
+\item Un peu de motivation !
+\end{itemize}
+
+
 
 C'est mon premier gros cours, donc n'hésitez pas à faire remonter tout ce qui vous semble utile de rapporter.
 
