--- a/Reference/Character/SpecialCharacter.tex
+++ b/Reference/Character/SpecialCharacter.tex
@@ -6,5 +6,5 @@
 \verb"\r" & Retour chariot (Utilisé sur d'autres systèmes). \\ \hline
 \verb"\t" & Tabulation horizontale. \\ \hline
 \verb'\"' & Guillemet double : \verb'"'. \\ \hline
-\verb"\'" & Guillemet simple : \verb"'". \\ \hline
+%\verb"\'" & Guillemet simple : \verb"'". \\ \hline
 \verb"\u{n}" & Caractère Unicode arbitraire de code hexadécimal $n$. \\ \hline
